플레이어 개발 중

--- a/3TeamProject/3TeamProject/3TeamProject.vcxproj
+++ b/3TeamProject/3TeamProject/3TeamProject.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="CSceneManager.h" />
     <ClInclude Include="CScrollManager.h" />
     <ClInclude Include="CUiManager.h" />
+    <ClInclude Include="CYGObject.h" />
     <ClInclude Include="CYGPlayer.h" />
     <ClInclude Include="CYGScene.h" />
     <ClInclude Include="Define.h" />
@@ -187,6 +188,7 @@
     <ClCompile Include="CSceneManager.cpp" />
     <ClCompile Include="CScrollManager.cpp" />
     <ClCompile Include="CUiManager.cpp" />
+    <ClCompile Include="CYGObject.cpp" />
     <ClCompile Include="CYGPlayer.cpp" />
     <ClCompile Include="CYGScene.cpp" />
     <ClCompile Include="pch.cpp">
