--- a/3TeamProject/3TeamProject/3TeamProject.vcxproj
+++ b/3TeamProject/3TeamProject/3TeamProject.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="CCYPlayer.h" />
     <ClInclude Include="CCYScene.h" />
     <ClInclude Include="CCYTail.h" />
+    <ClInclude Include="CDWPlayer.h" />
     <ClInclude Include="CDWScene.h" />
     <ClInclude Include="CJWScene.h" />
     <ClInclude Include="CKeyManager.h" />
@@ -184,6 +185,7 @@
     <ClCompile Include="CCYPlayer.cpp" />
     <ClCompile Include="CCYScene.cpp" />
     <ClCompile Include="CCYTail.cpp" />
+    <ClCompile Include="CDWPlayer.cpp" />
     <ClCompile Include="CDWScene.cpp" />
     <ClCompile Include="CJWScene.cpp" />
     <ClCompile Include="CKeyManager.cpp" />
