--- a/3TeamProject/3TeamProject/3TeamProject.vcxproj.filters
+++ b/3TeamProject/3TeamProject/3TeamProject.vcxproj.filters
@@ -180,6 +180,12 @@
     <ClInclude Include="CDWPlayer.h">
       <Filter>02_Object\03_DW</Filter>
     </ClInclude>
+    <ClInclude Include="CFruit.h">
+      <Filter>02_Object\04_JW</Filter>
+    </ClInclude>
+    <ClInclude Include="CObjPool.h">
+      <Filter>02_Object\04_JW</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="3TeamProject.cpp">
@@ -256,6 +262,9 @@
     </ClCompile>
     <ClCompile Include="CDWPlayer.cpp">
       <Filter>02_Object\03_DW</Filter>
+    </ClCompile>
+    <ClCompile Include="CFruit.cpp">
+      <Filter>02_Object\04_JW</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
