--- a/3TeamProject/3TeamProject/3TeamProject.vcxproj.filters
+++ b/3TeamProject/3TeamProject/3TeamProject.vcxproj.filters
@@ -88,6 +88,9 @@
     <Filter Include="01_Scene\03_DW">
       <UniqueIdentifier>{a72bae54-602c-4ac1-85d6-a5ba4607e608}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02_Object\02_CY\00. CCY">
+      <UniqueIdentifier>{2f981760-cd01-4146-8716-782c00189ac8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -186,6 +189,12 @@
     <ClInclude Include="CObjPool.h">
       <Filter>02_Object\04_JW</Filter>
     </ClInclude>
+    <ClInclude Include="CCYSegment.h">
+      <Filter>02_Object\02_CY\00. CCY</Filter>
+    </ClInclude>
+    <ClInclude Include="CCYHead.h">
+      <Filter>02_Object\02_CY</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="3TeamProject.cpp">
@@ -265,6 +274,12 @@
     </ClCompile>
     <ClCompile Include="CFruit.cpp">
       <Filter>02_Object\04_JW</Filter>
+    </ClCompile>
+    <ClCompile Include="CCYSegment.cpp">
+      <Filter>02_Object\02_CY\00. CCY</Filter>
+    </ClCompile>
+    <ClCompile Include="CCYHead.cpp">
+      <Filter>02_Object\02_CY</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
