25년1월17일오후9시

--- a/3TeamProject/3TeamProject/3TeamProject.vcxproj
+++ b/3TeamProject/3TeamProject/3TeamProject.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="CCYPlayer.h" />
     <ClInclude Include="CCYScene.h" />
     <ClInclude Include="CCYTail.h" />
+    <ClInclude Include="CDWObject.h" />
     <ClInclude Include="CDWPlayer.h" />
     <ClInclude Include="CDWScene.h" />
     <ClInclude Include="CFruit.h" />
@@ -165,6 +166,7 @@
     <ClInclude Include="CObjectManager.h" />
     <ClInclude Include="CObject.h" />
     <ClInclude Include="CObjPool.h" />
+    <ClInclude Include="CRoad.h" />
     <ClInclude Include="CScene.h" />
     <ClInclude Include="CSceneManager.h" />
     <ClInclude Include="CScrollManager.h" />
@@ -187,6 +189,7 @@
     <ClCompile Include="CCYPlayer.cpp" />
     <ClCompile Include="CCYScene.cpp" />
     <ClCompile Include="CCYTail.cpp" />
+    <ClCompile Include="CDWObject.cpp" />
     <ClCompile Include="CDWPlayer.cpp" />
     <ClCompile Include="CDWScene.cpp" />
     <ClCompile Include="CFruit.cpp" />
@@ -197,6 +200,7 @@
     <ClCompile Include="CMyBmp.cpp" />
     <ClCompile Include="CObjectManager.cpp" />
     <ClCompile Include="CObject.cpp" />
+    <ClCompile Include="CRoad.cpp" />
     <ClCompile Include="CScene.cpp" />
     <ClCompile Include="CSceneManager.cpp" />
     <ClCompile Include="CScrollManager.cpp" />
