--- a/3TeamProject/3TeamProject/3TeamProject.vcxproj.filters
+++ b/3TeamProject/3TeamProject/3TeamProject.vcxproj.filters
@@ -88,6 +88,12 @@
     <Filter Include="01_Scene\03_DW">
       <UniqueIdentifier>{a72bae54-602c-4ac1-85d6-a5ba4607e608}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02_Object\03_DW\Player">
+      <UniqueIdentifier>{0d3222b4-2f14-4b7e-8af5-f05c3a925ebd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02_Object\03_DW\Road">
+      <UniqueIdentifier>{c7d4fdb4-97bc-48c5-bb95-6a4870249238}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -177,14 +183,20 @@
     <ClInclude Include="CCYObject.h">
       <Filter>02_Object\02_CY</Filter>
     </ClInclude>
-    <ClInclude Include="CDWPlayer.h">
-      <Filter>02_Object\03_DW</Filter>
-    </ClInclude>
     <ClInclude Include="CFruit.h">
       <Filter>02_Object\04_JW</Filter>
     </ClInclude>
     <ClInclude Include="CObjPool.h">
       <Filter>02_Object\04_JW</Filter>
+    </ClInclude>
+    <ClInclude Include="CRoad.h">
+      <Filter>02_Object\03_DW\Road</Filter>
+    </ClInclude>
+    <ClInclude Include="CDWPlayer.h">
+      <Filter>02_Object\03_DW\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="CDWObject.h">
+      <Filter>02_Object\03_DW</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -260,11 +272,17 @@
     <ClCompile Include="CCYObject.cpp">
       <Filter>02_Object\02_CY</Filter>
     </ClCompile>
-    <ClCompile Include="CDWPlayer.cpp">
-      <Filter>02_Object\03_DW</Filter>
-    </ClCompile>
     <ClCompile Include="CFruit.cpp">
       <Filter>02_Object\04_JW</Filter>
+    </ClCompile>
+    <ClCompile Include="CRoad.cpp">
+      <Filter>02_Object\03_DW\Road</Filter>
+    </ClCompile>
+    <ClCompile Include="CDWPlayer.cpp">
+      <Filter>02_Object\03_DW\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="CDWObject.cpp">
+      <Filter>02_Object\03_DW</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
