--- a/3TeamProject/3TeamProject/3TeamProject.vcxproj.filters
+++ b/3TeamProject/3TeamProject/3TeamProject.vcxproj.filters
@@ -91,6 +91,9 @@
     <Filter Include="02_Object\02_CY\00. CCY">
       <UniqueIdentifier>{2f981760-cd01-4146-8716-782c00189ac8}</UniqueIdentifier>
     </Filter>
+    <Filter Include="99_Managers\SoundManager">
+      <UniqueIdentifier>{770f075b-4ae5-457f-a0f7-9e921ef6bd7d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -204,6 +207,9 @@
     <ClInclude Include="CDWPlayer.h">
       <Filter>02_Object\03_DW</Filter>
     </ClInclude>
+    <ClInclude Include="CSoundManager.h">
+      <Filter>99_Managers\SoundManager</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="3TeamProject.cpp">
@@ -298,6 +304,9 @@
     </ClCompile>
     <ClCompile Include="CDWPlayer.cpp">
       <Filter>02_Object\03_DW</Filter>
+    </ClCompile>
+    <ClCompile Include="CSoundManager.cpp">
+      <Filter>99_Managers\SoundManager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
