--- a/3TeamProject/3TeamProject/3TeamProject.vcxproj
+++ b/3TeamProject/3TeamProject/3TeamProject.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="CSceneManager.h" />
     <ClInclude Include="CScrollManager.h" />
     <ClInclude Include="CUiManager.h" />
+    <ClInclude Include="CYGBullet.h" />
     <ClInclude Include="CYGObject.h" />
     <ClInclude Include="CYGPlayer.h" />
     <ClInclude Include="CYGScene.h" />
@@ -211,6 +212,7 @@
     <ClCompile Include="CSceneManager.cpp" />
     <ClCompile Include="CScrollManager.cpp" />
     <ClCompile Include="CUiManager.cpp" />
+    <ClCompile Include="CYGBullet.cpp" />
     <ClCompile Include="CYGObject.cpp" />
     <ClCompile Include="CYGPlayer.cpp" />
     <ClCompile Include="CYGScene.cpp" />
