--- a/3TeamProject/3TeamProject/3TeamProject.vcxproj.filters
+++ b/3TeamProject/3TeamProject/3TeamProject.vcxproj.filters
@@ -204,6 +204,9 @@
     <ClInclude Include="CDWPlayer.h">
       <Filter>02_Object\03_DW</Filter>
     </ClInclude>
+    <ClInclude Include="CYGBullet.h">
+      <Filter>02_Object\01_YG</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="3TeamProject.cpp">
@@ -298,6 +301,9 @@
     </ClCompile>
     <ClCompile Include="CDWPlayer.cpp">
       <Filter>02_Object\03_DW</Filter>
+    </ClCompile>
+    <ClCompile Include="CYGBullet.cpp">
+      <Filter>02_Object\01_YG</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
