--- a/3TeamProject/3TeamProject/3TeamProject.vcxproj.filters
+++ b/3TeamProject/3TeamProject/3TeamProject.vcxproj.filters
@@ -195,17 +195,23 @@
     <ClInclude Include="CCYHead.h">
       <Filter>02_Object\02_CY</Filter>
     </ClInclude>
-    <ClInclude Include="CCYFood.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="CRoad.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="CDWObject.h">
       <Filter>02_Object\03_DW</Filter>
     </ClInclude>
     <ClInclude Include="CDWPlayer.h">
       <Filter>02_Object\03_DW</Filter>
+    </ClInclude>
+    <ClInclude Include="CCYFood.h">
+      <Filter>02_Object\02_CY</Filter>
+    </ClInclude>
+    <ClInclude Include="CRoad.h">
+      <Filter>02_Object\03_DW</Filter>
+    </ClInclude>
+    <ClInclude Include="CSoundManager.h">
+      <Filter>99_Managers\SoundManager</Filter>
+    </ClInclude>
+    <ClInclude Include="CYGBullet.h">
+      <Filter>02_Object\01_YG</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -290,17 +296,23 @@
     <ClCompile Include="CCYHead.cpp">
       <Filter>02_Object\02_CY</Filter>
     </ClCompile>
-    <ClCompile Include="CCYFood.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="CRoad.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="CDWObject.cpp">
       <Filter>02_Object\03_DW</Filter>
     </ClCompile>
     <ClCompile Include="CDWPlayer.cpp">
       <Filter>02_Object\03_DW</Filter>
+    </ClCompile>
+    <ClCompile Include="CCYFood.cpp">
+      <Filter>02_Object\02_CY</Filter>
+    </ClCompile>
+    <ClCompile Include="CRoad.cpp">
+      <Filter>02_Object\03_DW</Filter>
+    </ClCompile>
+    <ClCompile Include="CSoundManager.cpp">
+      <Filter>99_Managers\SoundManager</Filter>
+    </ClCompile>
+    <ClCompile Include="CYGBullet.cpp">
+      <Filter>02_Object\01_YG</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
