스크롤 적용하기

--- a/3TeamProject/3TeamProject/3TeamProject.vcxproj.filters
+++ b/3TeamProject/3TeamProject/3TeamProject.vcxproj.filters
@@ -97,6 +97,9 @@
     <Filter Include="02_Object\01_YG\00_MapObj">
       <UniqueIdentifier>{86f778fb-1c7a-4deb-9853-03fed2975adf}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02_Object\01_YG\01_Item">
+      <UniqueIdentifier>{ce2f99e0-24a9-44e1-a810-eb4497b8686f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -219,6 +222,15 @@
     <ClInclude Include="CYGBox.h">
       <Filter>02_Object\01_YG\00_MapObj</Filter>
     </ClInclude>
+    <ClInclude Include="CYGItem.h">
+      <Filter>02_Object\01_YG\01_Item</Filter>
+    </ClInclude>
+    <ClInclude Include="CYGGunItem.h">
+      <Filter>02_Object\01_YG\01_Item</Filter>
+    </ClInclude>
+    <ClInclude Include="CYGBulletItem.h">
+      <Filter>02_Object\01_YG\01_Item</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="3TeamProject.cpp">
@@ -322,6 +334,15 @@
     </ClCompile>
     <ClCompile Include="CYGBox.cpp">
       <Filter>02_Object\01_YG\00_MapObj</Filter>
+    </ClCompile>
+    <ClCompile Include="CYGItem.cpp">
+      <Filter>02_Object\01_YG\01_Item</Filter>
+    </ClCompile>
+    <ClCompile Include="CYGGunItem.cpp">
+      <Filter>02_Object\01_YG\01_Item</Filter>
+    </ClCompile>
+    <ClCompile Include="CYGBulletItem.cpp">
+      <Filter>02_Object\01_YG\01_Item</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
