--- a/3TeamProject/3TeamProject/3TeamProject.vcxproj
+++ b/3TeamProject/3TeamProject/3TeamProject.vcxproj
@@ -179,6 +179,9 @@
     <ClInclude Include="CUiManager.h" />
     <ClInclude Include="CYGBox.h" />
     <ClInclude Include="CYGBullet.h" />
+    <ClInclude Include="CYGBulletItem.h" />
+    <ClInclude Include="CYGGunItem.h" />
+    <ClInclude Include="CYGItem.h" />
     <ClInclude Include="CYGObject.h" />
     <ClInclude Include="CYGPlayer.h" />
     <ClInclude Include="CYGScene.h" />
@@ -219,6 +222,9 @@
     <ClCompile Include="CUiManager.cpp" />
     <ClCompile Include="CYGBox.cpp" />
     <ClCompile Include="CYGBullet.cpp" />
+    <ClCompile Include="CYGBulletItem.cpp" />
+    <ClCompile Include="CYGGunItem.cpp" />
+    <ClCompile Include="CYGItem.cpp" />
     <ClCompile Include="CYGObject.cpp" />
     <ClCompile Include="CYGPlayer.cpp" />
     <ClCompile Include="CYGScene.cpp" />
