--- a/3TeamProject/3TeamProject/3TeamProject.vcxproj.filters
+++ b/3TeamProject/3TeamProject/3TeamProject.vcxproj.filters
@@ -100,6 +100,9 @@
     <Filter Include="02_Object\01_YG\01_Item">
       <UniqueIdentifier>{ce2f99e0-24a9-44e1-a810-eb4497b8686f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02_Object\01_YG\02_Monster">
+      <UniqueIdentifier>{df80b1cf-6f40-42cf-9b4f-e6a2da9cecf3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -231,6 +234,9 @@
     <ClInclude Include="CYGBulletItem.h">
       <Filter>02_Object\01_YG\01_Item</Filter>
     </ClInclude>
+    <ClInclude Include="CYGPunchMonster.h">
+      <Filter>02_Object\01_YG\02_Monster</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="3TeamProject.cpp">
@@ -343,6 +349,9 @@
     </ClCompile>
     <ClCompile Include="CYGObject.cpp">
       <Filter>02_Object\01_YG</Filter>
+    </ClCompile>
+    <ClCompile Include="CYGPunchMonster.cpp">
+      <Filter>02_Object\01_YG\02_Monster</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
