--- a/3TeamProject/3TeamProject/3TeamProject.vcxproj
+++ b/3TeamProject/3TeamProject/3TeamProject.vcxproj
@@ -180,12 +180,13 @@
     <ClInclude Include="CUiManager.h" />
     <ClInclude Include="CYGBox.h" />
     <ClInclude Include="CYGBullet.h" />
+    <ClInclude Include="CYGBulletBox.h" />
     <ClInclude Include="CYGBulletItem.h" />
     <ClInclude Include="CYGGunItem.h" />
     <ClInclude Include="CYGItem.h" />
     <ClInclude Include="CYGObject.h" />
     <ClInclude Include="CYGPlayer.h" />
-    <ClInclude Include="CYGPunchMonster.h" />
+    <ClInclude Include="CYGMonster.h" />
     <ClInclude Include="CYGScene.h" />
     <ClInclude Include="Define.h" />
     <ClInclude Include="framework.h" />
@@ -224,12 +225,13 @@
     <ClCompile Include="CUiManager.cpp" />
     <ClCompile Include="CYGBox.cpp" />
     <ClCompile Include="CYGBullet.cpp" />
+    <ClCompile Include="CYGBulletBox.cpp" />
     <ClCompile Include="CYGBulletItem.cpp" />
     <ClCompile Include="CYGGunItem.cpp" />
     <ClCompile Include="CYGItem.cpp" />
     <ClCompile Include="CYGObject.cpp" />
     <ClCompile Include="CYGPlayer.cpp" />
-    <ClCompile Include="CYGPunchMonster.cpp" />
+    <ClCompile Include="CYGMonster.cpp" />
     <ClCompile Include="CYGScene.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
